# cilscanner

./: README.md
tools/: CMakeLists.txt  capture_sequence.py  cilscanner.cpp  cilscanner.hpp  conservative.sequence  findlightsources.cpp  findred.cpp  floatmaps.cpp  floatmaps.hpp  inverse_conservative.sequence  object_capture.py  options.hpp  patternrotate.py  redball.sequence  show_pattern.py  solvenormals.cpp  testballcalib.m  tools.kdev4
tools/driver/: cameracapture.py  cilscanner.py
tools/driver/firmware/: CMakeLists.txt  cilscanner.ino
